allow simple standard dev based outlier marking
#75

--- a/vignettes/ea_irms_example_carbon.Rmd
+++ b/vignettes/ea_irms_example_carbon.Rmd
@@ -80,24 +80,22 @@ iso_files_raw <-
 
 ## Process file info & peak table (*)
 
-```{r}
-# peak identification
-peak_map <- 
-  tibble::tribble(
-    ~compound,     ~ref_nr, ~rt,
-    # peak map data (row-by-row)
-    "CO2 analyte", NA,		  300,
-    "CO2 ref",			1,	  	415,
-    "CO2 ref",			2,	  	465
-  )
-peak_map %>% knitr::kable(digits = 0)
+### Peak Table
 
-# process
-iso_files <- iso_files_raw %>% 
+```{r}
+# process peak table
+iso_files_w_peak_table <- iso_files_raw %>% 
   # set peak table from vendor data table
   iso_set_peak_table_from_auto_vendor_data_table() %>% 
   # convert units from mV to V for amplitudes and area
-  iso_convert_peak_table_units(V = mV, Vs = mVs) %>% 
+  iso_convert_peak_table_units(V = mV, Vs = mVs) 
+```
+
+### File Info
+
+```{r}
+# process file information
+iso_files_w_file_info <- iso_files_w_peak_table %>% 
   # rename key file info columns
   iso_rename_file_info(
     id1 = `Identifier 1`, id2 = `Identifier 2`, prep = Preparation,
@@ -123,17 +121,42 @@ iso_files <- iso_files_raw %>%
     folder = basename(dirname(file_path))
   ) %>% 
   # focus only on the relevant file info, discarding the rest
-  iso_select_file_info(folder, analysis, seq_nr, file_datetime, id1, id2, type, mass) %>% 
+  iso_select_file_info(folder, analysis, seq_nr, file_datetime, id1, id2, type, mass)
+```
+
+### File Filter
+
+```{r}
+# filter out files we don't want to process futher
+iso_files_without_empty <- iso_files_w_file_info %>% 
   # filter out emptys at the beginning of the run
-  iso_filter_files(type != "empty") %>% 
-  # identify peaks
-  iso_map_peaks(peak_map)
+  iso_filter_files(type != "empty") 
+```
+
+### Peak Mapping
+
+```{r}
+# identify peaks
+peak_map <- 
+  tibble::tribble(
+    ~compound,     ~ref_nr, ~rt,
+    # peak map data (row-by-row)
+    "CO2 analyte", NA,		  300,
+    "CO2 ref",			1,	  	415,
+    "CO2 ref",			2,	  	465
+  )
+peak_map %>% knitr::kable(digits = 0)
+
+iso_files_w_mapped_peaks <- iso_files_without_empty %>% iso_map_peaks(peak_map)
 
 # show first few rows of the peak mappings summary (unmapped peaks = N2)
-iso_files %>% 
+iso_files_w_mapped_peaks %>% 
   iso_summarize_peak_mappings() %>% 
   head(10) %>% 
   knitr::kable()
+
+# assign final collection of iso_files to a simpler name
+iso_files <- iso_files_w_mapped_peaks
 ```
 
 ## Show file information
@@ -253,12 +276,12 @@ peak_table %>%
   # mark +/- 1, 2, 3 std. deviation value ranges
   iso_mark_value_range(sd = c(1,2,3)) %>% 
   # mark outliers (those outside the 3 sigma range)
-  iso_mark_outliers(condition = abs(d13C - d13C_mean) > 3 * d13C_sd, label = analysis)
+  iso_mark_outliers(sd = 3, label = analysis)
 ```
 
 ## Identify outliers (*)
 
-Analys #19691 is more than 3 standard deviations outside the scale2 standard mean and therefore explicitly flagged as an is_outlier.
+Analysis #19691 is more than 3 standard deviations outside the scale2 standard mean and therefore explicitly flagged as an is_outlier.
 
 ```{r}
 # mark outlier
@@ -636,7 +659,7 @@ peak_table_lin_scale_mass_corr %>%
 
 ### Check carbon percent drift
 
-It looks like there is quite some variation around the known valule --> check if there is temporal drift affecting the measured %C:
+It looks like there is quite some variation around the known value --> check if there is temporal drift affecting the measured %C:
 
 ```{r "mass_calibration_drift_check", fig.width=6, fig.height=6}
 peak_table_lin_scale_mass_corr %>% 
