--- a/vignettes/continuous_flow.Rmd
+++ b/vignettes/continuous_flow.Rmd
@@ -29,7 +29,7 @@ library(isoprocessor)
 
 ```{r}
 # read a few of the continuous flow examples provided with isoreader
-iso_files <- 
+cf_files <- 
   iso_read_continuous_flow(
     iso_get_reader_example("continuous_flow_example.cf"),
     iso_get_reader_example("continuous_flow_example.iarc"),
@@ -43,7 +43,7 @@ iso_files <-
 Plotting the raw data (i.e. the mass chromatograms) can be done either with the generic `iso_plot_raw_data()` function for a simple plot with default parameters, or directly using the continuous flow specific `iso_plot_continuous_flow()` (recommended), which can be highly customized. Note that the following plot shows the data from all files in their originally recorded signal intensity units. For examples of how to convert to a common unit, see the section on **Signal conversion** further down.
 
 ```{r "all data", fig.width = 10, fig.asp = 2}
-iso_plot_continuous_flow_data(iso_files)
+iso_plot_continuous_flow_data(cf_files)
 ```
 
 All customization options are described in the function help (`?iso_plot_continuous_flow_data`) and include, for example, plotting only a specific subset of masses (which will omit data from files that don't include this mass):
@@ -51,7 +51,7 @@ All customization options are described in the function help (`?iso_plot_continu
 ```{r "select masses", fig.width = 10, fig.asp = 1}
 # plot just masses 2, 44 and 45
 iso_plot_continuous_flow_data(
-  iso_files,
+  cf_files,
   data = c("2", "44", "45")
 )
 ```
@@ -63,19 +63,19 @@ Continuous flow data is usually interpreted in the context of the individiual pe
 ```{r}
 # this is a convenience function to set peak table from isodat data table, it 
 # provides detailed information on the information copied to the peak table
-iso_files <- iso_set_peak_table_from_isodat_vendor_data_table(iso_files)
+cf_files <- iso_set_peak_table_from_isodat_vendor_data_table(cf_files)
 
-# display the resulting peak table now stored in the iso_files for the first file
-iso_files[1] %>% iso_get_peak_table() %>% rmarkdown::paged_table()
+# display the resulting peak table now stored in the cf_files for the first file
+cf_files[1] %>% iso_get_peak_table() %>% rmarkdown::paged_table()
 ```
 
 # Peak Labels
 
-Since peak information is often key for interpretating chromatograms, the `iso_plot_continuous_flow_data` function also provides a suite of peak data integration parameters that make it easy to highlight peaks in the chromatogram and label them with any number of desired information. Now that the collection of `iso_files` has peak table information stored within, it is easy to make use of these for visualization.
+Since peak information is often key for interpretating chromatograms, the `iso_plot_continuous_flow_data` function also provides a suite of peak data integration parameters that make it easy to highlight peaks in the chromatogram and label them with any number of desired information. Now that the collection of `cf_files` has peak table information stored within, it is easy to make use of these for visualization.
 
 ```{r "with_peak_labels", fig.width = 9, fig.asp = 0.4}
 iso_plot_continuous_flow_data(
-  iso_files, 
+  cf_files, 
   # select which data to plot and how to plot it
   data = c("2", "3"), color = data, panel = NULL,
   # specify what to highlight about the peaks (here: bounds, ret. time and dD)
@@ -93,13 +93,13 @@ iso_plot_continuous_flow_data(
 Raw data typically only includes ion signals but isotope ratios are often needed to calculate and visualize the data. For this purpose, isoreader provides a dynamic ratio calculation function (`iso_calculate_ratios()`) that accepts any combination of masses, here demonstrated for the standard CO2 ratios $\frac{46}{44}$ and $\frac{45}{44}$. Additionally, the following example demonstrates how the `filter` parameter can be used to exclude plotting artifacts (here e.g. the extreme ratio values seen right after the magnet jump). Notice how the ratios calculated from current intensities are close to 0 (as the real ratios likely are) whereas those calculated from voltages are close to 1 (due to the so chosen, different resistors in the detector circuit). See the section on **Signal conversion** further down on how to scale to uniform intensity units to address this comparison obstacle.
 
 ```{r "ratios", fig.width = 10, fig.asp = 0.8}
-iso_files <-
-  iso_files %>% 
+cf_files <-
+  cf_files %>% 
   # calculate 46/44 and 45/44 ratios
   iso_calculate_ratios(ratios = c("46/44", "45/44"))
 
 iso_plot_continuous_flow_data(
-  iso_files,
+  cf_files,
   # visualize ratios along with main ion
   data = c("44", "45/44", "46/44"),
   # plot all masses but ratios only 0 to 2 to omit peak jump artifacts
@@ -113,16 +113,16 @@ Most continuous flow data is reported in time units of seconds but this is not a
 
 ```{r "time conversion", fig.width = 10, fig.asp = 0.5}
 # convert to minutes
-iso_files <- iso_convert_time(iso_files, to = "minutes") 
+cf_files <- iso_convert_time(cf_files, to = "minutes") 
 
 # plot masses 2 and 3
-iso_plot_continuous_flow_data(iso_files, data = c(2, 3))
+iso_plot_continuous_flow_data(cf_files, data = c(2, 3))
 ```
 
 In this context, another useful customization option of the plotting function is the option to select a specific time window (in any time units, regardless of what is plotted), and the possibility to adjust plot aesthetics such as color, linetype, and paneling:
 
 ```{r "time window", fig.width = 10, fig.asp = 0.5}
-iso_files %>% 
+cf_files %>% 
   # calculate 3/2 ratio on the file
   iso_calculate_ratios("3/2") %>% 
   iso_plot_continuous_flow_data(
@@ -144,7 +144,7 @@ iso_files %>%
 Likewise, isoreader can convert between different signal units. This is particularly useful for comparing data files from different mass specs that record signals differentally. The earlier plot of mass 44 illustrated this scenario where some data was recorded in mV and some in nA. Voltages and currents can be scaled within each unit without restriction and with any valid SI prefix  (e.g. from mV to V or nA to pA), however, for conversion from voltage to current or vice-versa, the appropriate resistor values need to be provided or be available from the data files themselves. The following is an example of scaling from voltage to current with the resistor values automatically read from the original data files (see file information section for details). Notice how the mass 44 signal is now in the same units for all files and the ratios are on comparable scales because they are calculated from the same unit intensities:
 
 ```{r "signal conversion", fig.width = 10, fig.asp = 0.7}
-iso_files %>% 
+cf_files %>% 
   # convert all signals to nano ampere
   iso_convert_signals(to = "nA") %>% 
   # re-calculate ratios with the new unuts
@@ -166,7 +166,7 @@ Since all isoreader plots are standard [ggplot](http://ggplot2.tidyverse.org/) o
 ```{r "styling", fig.width = 10, fig.asp = 0.5}
 library(ggplot2)
 # replot
-iso_plot_continuous_flow_data(iso_files, data = c(2,3)) +
+iso_plot_continuous_flow_data(cf_files, data = c(2,3)) +
   # add vertical dashed line (ggplot functionality)
   geom_vline(xintercept = 15, linetype = 2) +
   # modify plot styling (ggplot functionality)
