--- a/vignettes/dual_inlet.Rmd
+++ b/vignettes/dual_inlet.Rmd
@@ -31,7 +31,7 @@ library(isoprocessor)
 
 ```{r}
 # read dual inlet examples provided by the isoreader package
-iso_files <- 
+di_files <- 
   iso_read_dual_inlet(
     iso_get_reader_example("dual_inlet_example.did"),
     iso_get_reader_example("dual_inlet_example2.did"),
@@ -44,7 +44,7 @@ iso_files <-
 Plotting the raw data can be done either with the generic `iso_plot_raw_data()` function for a simple plot with default parameters, or directly using the dual inlet specific `iso_plot_dual_inlet_data()`:
 
 ```{r "all_data", fig.width = 12, fig.asp = 0.8}
-iso_plot_dual_inlet_data(iso_files)
+iso_plot_dual_inlet_data(di_files)
 ```
 
 All customization options are described in the function help (`?iso_plot_dual_inlet_data`) and include, for example, plotting only a specific subset of masses:
@@ -52,7 +52,7 @@ All customization options are described in the function help (`?iso_plot_dual_in
 ```{r "select_masses", fig.width = 10, fig.asp = 0.3}
 # plot just masses 2, 44 and 45
 iso_plot_dual_inlet_data(
-  iso_files,
+  di_files,
   data = c("28", "44", "45")
 )
 ```
@@ -62,13 +62,13 @@ iso_plot_dual_inlet_data(
 For dual inlet applications isotope ratios calculated using the recorded ion intensities are typically of primary interest. For this purpose, isoprocessor provides a dynamic ratio calculation function (`iso_calculate_ratios()`) that accepts any combination of masses, here demonstrated for several different ratios. In this context, another useful customization option of the plotting function is the option to adjust plot aesthetics such as color, shape, and paneling:
 
 ```{r "ratios", fig.width = 8, fig.asp = 1}
-iso_files <-
-  iso_files %>% 
+di_files <-
+  di_files %>% 
   # calculate 46/44, 45/44 and 32/28 (O2/N2) ratios
   iso_calculate_ratios(ratios = c("46/44", "45/44", "32/28"))
 
 iso_plot_dual_inlet_data(
-  iso_files,
+  di_files,
   # visualize ratios
   data = c("45/44", "46/44", "32/28"),
   # panel the ratios vs. type (standard/sample)
@@ -83,14 +83,14 @@ iso_plot_dual_inlet_data(
 In addition, isoprocessor provides a dynamic raw delta calculation function (`iso_calculate_deltas()`) that calculates direct or bracketed sample-standard delta values as described in the function help. See code below for a few examples:
 
 ```{r "deltas", fig.width = 8, fig.asp = 1}
-iso_files <-
-  iso_files %>% 
+di_files <-
+  di_files %>% 
   # calculate 46/44, 45/44 and 32/28 (O2/N2) deltas
   iso_calculate_deltas(deltas = c("d46/44", "d45/44", "d32/28"), 
                        bracket = TRUE, in_permil = TRUE)
 
 iso_plot_dual_inlet_data(
-  iso_files,
+  di_files,
   # visualize deltas together with one of the ratios
   data = c("45/44", "d45/44", "d46/44", "d32/28"),
   # color by the file info stored in Identifier 1
@@ -104,7 +104,7 @@ iso_plot_dual_inlet_data(
 Isoprocessor can convert between different signal units. This is particularly useful for comparing data files from different mass specs that record primary signals differentally. In dual inlet applications, this is typically less important than in continuous flow because data is usually visualized as ratios right away. However, occassionally it can be of interest to examine the primary ion currents. 
 
 ```{r "signal_conversion", fig.width = 10, fig.asp = 0.3}
-iso_files$dual_inlet_example.caf %>% 
+di_files$dual_inlet_example.caf %>% 
   # convert all signals to nano ampere
   iso_convert_signals(to = "pA") %>% 
   # plot primary ion currents
@@ -122,7 +122,7 @@ Since all isoprocessor plots are standard [ggplot](http://ggplot2.tidyverse.org/
 library(ggplot2)
 # replot
 iso_plot_dual_inlet_data(
-  iso_files, 
+  di_files, 
   data = "45/44",
   panel = type ~ `Identifier 1`,
   color = `Identifier 1`
