add github actions for RMD check and pkgdown

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,7 @@ version <- as.character(packageVersion("isoprocessor"))
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/isoprocessor)](https://cran.r-project.org/package=isoprocessor)
 [![Git_Hub_Version](https://img.shields.io/badge/GitHub-`r version`-orange.svg?style=flat-square)](https://github.com/isoverse/isoprocessor/commits)
 [![Documentation](https://img.shields.io/badge/docs-online-green.svg)](http://isoprocessor.isoverse.org/)
+[![R build status](https://github.com/isoverse/isoprocessor/workflows/R-CMD-check/badge.svg)](https://github.com/isoverse/isoprocessor/actions?workflow=R-CMD-check)
 [![Build Status](https://travis-ci.org/isoverse/isoprocessor.svg?branch=master)](https://travis-ci.org/isoverse/isoprocessor)
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/isoverse/isoprocessor?branch=master&svg=true)](https://ci.appveyor.com/project/KopfLab/isoprocessor)
 [![Binder](https://img.shields.io/badge/launch-RStudio-blue.svg)](https://mybinder.org/v2/gh/isoverse/isoprocessor/binder?urlpath=rstudio)
